--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div id="about">
     <h2><span class="font-primary">A</span>bout</h2>
-    <img src="img/sample-woman.jpg"/>
+    <img src="img/profile.jpeg"/>
     <div class="name">Adesola Fadipe</div>
     <div class="vocation">Web Application Developer</div>
     <div class="skills">HTML / CSS / Javascript / React.js / Redux / Python / Django / Express.js / AWS (basics) / Docker (Basics)</div>
